// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeScreen Component renders correctly 1`] = `
<SafeAreaView
  testID="home-screen"
>
  <ScrollView
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#C1C1C1",
          "height": 292,
          "justifyContent": "center",
        }
      }
    >
      <Text
        color="blackColor"
        markdown={false}
        markdownStyle={Object {}}
        type="text"
      >
        Header - TBD
      </Text>
    </Component>
    <Component
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 6,
          "marginHorizontal": 16,
          "marginTop": 12,
        }
      }
    >
      <Text
        color="blackColor"
        markdown={false}
        markdownStyle={Object {}}
        style={
          Object {
            "color": "rgb(45, 47, 127)",
          }
        }
        type="h2"
      >
        Featured events
      </Text>
      <Touchable
        accessibilityComponentType="button"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        delayPressIn={50}
        onPress={[Function]}
        testID="view-all"
      >
        <TextLink>
          View all
        </TextLink>
      </Touchable>
    </Component>
    <Component
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "center",
          "marginHorizontal": 12,
        }
      }
    >
      <Touchable
        accessibilityComponentType="button"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        delayPressIn={50}
        key="1"
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 3,
            "borderWidth": 0,
            "elevation": 3,
            "marginBottom": 12,
            "marginHorizontal": 4,
            "shadowColor": "rgba(0, 0, 0, 0.2)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
            "width": "47%",
          }
        }
        testID="event-tile-1"
      >
        <EventTile
          date="2018-07-10T00:00"
          eventCategories={
            Array [
              "Cabaret & Variety",
              "Music",
            ]
          }
          imageUrl="http://example.com/image.png"
          name="some other"
        />
      </Touchable>
      <Touchable
        accessibilityComponentType="button"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        delayPressIn={50}
        key="2"
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 3,
            "borderWidth": 0,
            "elevation": 3,
            "marginBottom": 12,
            "marginHorizontal": 4,
            "shadowColor": "rgba(0, 0, 0, 0.2)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
            "width": "47%",
          }
        }
        testID="event-tile-2"
      >
        <EventTile
          date="2018-07-10T00:00"
          eventCategories={
            Array [
              "Cabaret & Variety",
              "Music",
            ]
          }
          imageUrl="http://example.com/image.png"
          name="some other"
        />
      </Touchable>
      <Touchable
        accessibilityComponentType="button"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        delayPressIn={50}
        key="3"
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 3,
            "borderWidth": 0,
            "elevation": 3,
            "marginBottom": 12,
            "marginHorizontal": 4,
            "shadowColor": "rgba(0, 0, 0, 0.2)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
            "width": "47%",
          }
        }
        testID="event-tile-3"
      >
        <EventTile
          date="2018-07-10T00:00"
          eventCategories={
            Array [
              "Cabaret & Variety",
              "Music",
            ]
          }
          imageUrl="http://example.com/image.png"
          name="some other"
        />
      </Touchable>
      <Touchable
        accessibilityComponentType="button"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        delayPressIn={50}
        key="4"
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 3,
            "borderWidth": 0,
            "elevation": 3,
            "marginBottom": 12,
            "marginHorizontal": 4,
            "shadowColor": "rgba(0, 0, 0, 0.2)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
            "width": "47%",
          }
        }
        testID="event-tile-4"
      >
        <EventTile
          date="2018-07-10T00:00"
          eventCategories={
            Array [
              "Cabaret & Variety",
              "Music",
            ]
          }
          imageUrl="http://example.com/image.png"
          name="some other"
        />
      </Touchable>
    </Component>
  </ScrollView>
</SafeAreaView>
`;

exports[`HomeScreen Component renders max 6 events 1`] = `
<SafeAreaView
  testID="home-screen"
>
  <ScrollView
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  >
    <Component
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#C1C1C1",
          "height": 292,
          "justifyContent": "center",
        }
      }
    >
      <Text
        color="blackColor"
        markdown={false}
        markdownStyle={Object {}}
        type="text"
      >
        Header - TBD
      </Text>
    </Component>
    <Component
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 6,
          "marginHorizontal": 16,
          "marginTop": 12,
        }
      }
    >
      <Text
        color="blackColor"
        markdown={false}
        markdownStyle={Object {}}
        style={
          Object {
            "color": "rgb(45, 47, 127)",
          }
        }
        type="h2"
      >
        Featured events
      </Text>
      <Touchable
        accessibilityComponentType="button"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        delayPressIn={50}
        onPress={[Function]}
        testID="view-all"
      >
        <TextLink>
          View all
        </TextLink>
      </Touchable>
    </Component>
    <Component
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "center",
          "marginHorizontal": 12,
        }
      }
    >
      <Touchable
        accessibilityComponentType="button"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        delayPressIn={50}
        key="1"
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 3,
            "borderWidth": 0,
            "elevation": 3,
            "marginBottom": 12,
            "marginHorizontal": 4,
            "shadowColor": "rgba(0, 0, 0, 0.2)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
            "width": "47%",
          }
        }
        testID="event-tile-1"
      >
        <EventTile
          date="2018-07-10T00:00"
          eventCategories={
            Array [
              "Cabaret & Variety",
              "Music",
            ]
          }
          imageUrl="http://example.com/image.png"
          name="some other"
        />
      </Touchable>
      <Touchable
        accessibilityComponentType="button"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        delayPressIn={50}
        key="2"
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 3,
            "borderWidth": 0,
            "elevation": 3,
            "marginBottom": 12,
            "marginHorizontal": 4,
            "shadowColor": "rgba(0, 0, 0, 0.2)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
            "width": "47%",
          }
        }
        testID="event-tile-2"
      >
        <EventTile
          date="2018-07-10T00:00"
          eventCategories={
            Array [
              "Cabaret & Variety",
              "Music",
            ]
          }
          imageUrl="http://example.com/image.png"
          name="some other"
        />
      </Touchable>
      <Touchable
        accessibilityComponentType="button"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        delayPressIn={50}
        key="3"
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 3,
            "borderWidth": 0,
            "elevation": 3,
            "marginBottom": 12,
            "marginHorizontal": 4,
            "shadowColor": "rgba(0, 0, 0, 0.2)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
            "width": "47%",
          }
        }
        testID="event-tile-3"
      >
        <EventTile
          date="2018-07-10T00:00"
          eventCategories={
            Array [
              "Cabaret & Variety",
              "Music",
            ]
          }
          imageUrl="http://example.com/image.png"
          name="some other"
        />
      </Touchable>
      <Touchable
        accessibilityComponentType="button"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        delayPressIn={50}
        key="4"
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 3,
            "borderWidth": 0,
            "elevation": 3,
            "marginBottom": 12,
            "marginHorizontal": 4,
            "shadowColor": "rgba(0, 0, 0, 0.2)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
            "width": "47%",
          }
        }
        testID="event-tile-4"
      >
        <EventTile
          date="2018-07-10T00:00"
          eventCategories={
            Array [
              "Cabaret & Variety",
              "Music",
            ]
          }
          imageUrl="http://example.com/image.png"
          name="some other"
        />
      </Touchable>
      <Touchable
        accessibilityComponentType="button"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        delayPressIn={50}
        key="5"
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 3,
            "borderWidth": 0,
            "elevation": 3,
            "marginBottom": 12,
            "marginHorizontal": 4,
            "shadowColor": "rgba(0, 0, 0, 0.2)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
            "width": "47%",
          }
        }
        testID="event-tile-5"
      >
        <EventTile
          date="2018-07-10T00:00"
          eventCategories={
            Array [
              "Cabaret & Variety",
              "Music",
            ]
          }
          imageUrl="http://example.com/image.png"
          name="some other"
        />
      </Touchable>
      <Touchable
        accessibilityComponentType="button"
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        delayPressIn={50}
        key="6"
        onPress={[Function]}
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 3,
            "borderWidth": 0,
            "elevation": 3,
            "marginBottom": 12,
            "marginHorizontal": 4,
            "shadowColor": "rgba(0, 0, 0, 0.2)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
            "width": "47%",
          }
        }
        testID="event-tile-6"
      >
        <EventTile
          date="2018-07-10T00:00"
          eventCategories={
            Array [
              "Cabaret & Variety",
              "Music",
            ]
          }
          imageUrl="http://example.com/image.png"
          name="some other"
        />
      </Touchable>
    </Component>
  </ScrollView>
</SafeAreaView>
`;
